Made notes on testing and venv

--- a/05_intro_to_files_exceptions_testing.ipynb
+++ b/05_intro_to_files_exceptions_testing.ipynb
@@ -857,12 +857,44 @@
    "id": "39002bdb",
    "metadata": {},
    "source": [
-    "### **Testing**"
+    "### **Testing**\n",
+    "\n",
+    "Testing just means checking that your code does what you think it does. It matters a lot in data science because your work affects models, results, and decisions.\n",
+    "\n",
+    "It’s a set of practices like:\n",
+    "\n",
+    "- running small checks on your functions\n",
+    "\n",
+    "- writing tests that confirm your code behaves correctly\n",
+    "\n",
+    "- catching bugs early\n",
+    "\n",
+    "- making sure changes don’t break old code\n",
+    "\n",
+    "Why it’s important\n",
+    "\n",
+    "1. Data is messy\n",
+    "A tiny data issue (e.g., one weird value) can break your whole pipeline or model.\n",
+    "\n",
+    "2. Models depend on consistent inputs\n",
+    "If a column changes name or type, your model might silently produce wrong results.\n",
+    "\n",
+    "3. Prevents silent failure\n",
+    "Testing catches bugs before they turn into wrong insights or bad decisions.\n",
+    "\n",
+    "4. Makes your workflow reproducible\n",
+    "Your code runs the same way every time, even months later.\n",
+    "\n",
+    "5. Helps team members trust your work\n",
+    "People can't manually check everything; tests prove that your pipeline is solid.\n",
+    "\n",
+    "6. Saves time\n",
+    "Fixing bugs early is way cheaper than debugging a whole pipeline later."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "090b9913",
    "metadata": {},
    "outputs": [],
@@ -874,12 +906,13 @@
     "\n",
     "def test_squared():\n",
     "    assert squared(-2) == squared(2)\n",
-    "\n"
+    "\n",
+    "# this test checks whether the function squared() works correctly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "da76f5e6",
    "metadata": {},
    "outputs": [],
@@ -890,12 +923,13 @@
     "def test_division():\n",
     "    with pytest.raises(ZeroDivisionError):\n",
     "        division(a=25, b=0)\n",
-    "\n"
+    "\n",
+    "# this test checks whether the function division() works correctly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "342e188e",
    "metadata": {},
    "outputs": [],
@@ -912,12 +946,14 @@
     "@pytest.mark.skip\n",
     "def test_zero_value():\n",
     "    with pytest.raises(ValueError):\n",
-    "        multiple_of_two(0)\n"
+    "        multiple_of_two(0)\n",
+    "\n",
+    "# this test checks whether the function multiple_of_two() works correctly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "045e4cf4",
    "metadata": {},
    "outputs": [],
@@ -928,14 +964,12 @@
     "def test_gen_seq():\n",
     "    assert gen_sequence(5) == [1, 2, 3, 4, 5]\n",
     "\n",
-    "@pytest.mark.xfail\n",
-    "def test_gen_sequence():\n",
-    "    assert gen_sequence(-1)"
+    "# this test checks whether the function gen_sequence() works correctly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "99988a54",
    "metadata": {},
    "outputs": [
@@ -970,30 +1004,9 @@
       "✅ Generated sequence PASSED\n",
       "\n",
       "============================================================\n",
-      "Running: Generated sequence with negative input\n",
-      "============================================================\n",
-      "\n",
-      "❌ Generated sequence with negative input FAILED\n",
-      "Assertion Error: \n",
-      "\n",
-      "============================================================\n",
-      "Test Results: 5 passed, 1 failed, 0 skipped\n",
-      "❌ 1 TEST(S) FAILED\n",
+      "Test Results: 5 passed, 0 failed, 0 skipped\n",
+      "✅ ALL IMPLEMENTED TESTS PASSED!\n",
       "============================================================\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\AMANDA\\AppData\\Local\\Temp\\ipykernel_764\\1121395519.py\", line 23, in <module>\n",
-      "    test_func()\n",
-      "    ~~~~~~~~~^^\n",
-      "  File \"C:\\Users\\AMANDA\\AppData\\Local\\Temp\\ipykernel_764\\3852082332.py\", line 9, in test_gen_sequence\n",
-      "    assert gen_sequence(-1)\n",
-      "           ~~~~~~~~~~~~^^^^\n",
-      "AssertionError\n"
      ]
     }
    ],
@@ -1008,7 +1021,6 @@
     "        (\"Multiple of Two\", test_value),\n",
     "        (\"Zero value\", test_zero_value),\n",
     "        (\"Generated sequence\", test_gen_seq),\n",
-    "        (\"Generated sequence with negative input\", test_gen_sequence),\n",
     "    ]\n",
     "    \n",
     "    passed = 0\n",
@@ -1049,6 +1061,70 @@
     "    else:\n",
     "        print(f\"❌ {failed} TEST(S) FAILED\")\n",
     "    print(\"=\" * 60)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b02a244f",
+   "metadata": {},
+   "source": [
+    "#### **1. Data collection**\n",
+    "\n",
+    "* the data source is reachable\n",
+    "* the data schema is what you expect\n",
+    "* columns exist\n",
+    "* row counts aren’t unexpectedly small/large\n",
+    "* no weird file formats\n",
+    "\n",
+    "#### **2. Data cleaning**\n",
+    "\n",
+    "* missing values handled correctly\n",
+    "* data types converted correctly\n",
+    "* duplicates removed when needed\n",
+    "* outliers handled the way you intended\n",
+    "* text fields encoded properly\n",
+    "\n",
+    "#### **3. Feature engineering**\n",
+    "\n",
+    "* new features have the right values\n",
+    "* transformations run without errors\n",
+    "* scaling/encoding didn’t produce NaNs\n",
+    "* no leakage (features don’t use target info)\n",
+    "\n",
+    "#### **4. Train/test split**\n",
+    "\n",
+    "* split sizes are correct\n",
+    "* no overlap between train and test\n",
+    "* stratification worked (for imbalanced data)\n",
+    "\n",
+    "#### **5. Model training**\n",
+    "\n",
+    "* model trains without crashing\n",
+    "* metrics are within a reasonable range\n",
+    "* model converges (for iterative models)\n",
+    "* hyperparameters are valid\n",
+    "\n",
+    "#### **6. Model evaluation**\n",
+    "\n",
+    "* evaluation uses the correct dataset\n",
+    "* metrics calculations are correct\n",
+    "* no data leakage\n",
+    "* fairness checks (optional)\n",
+    "\n",
+    "#### **7. Deployment (if any)**\n",
+    "\n",
+    "* API responds\n",
+    "* model loads correctly\n",
+    "* input/output formats are correct\n",
+    "* prediction time is acceptable\n",
+    "\n",
+    "#### **8. Monitoring**\n",
+    "\n",
+    "* drift detection is working\n",
+    "* data quality checks still pass\n",
+    "* model metrics don’t fall below threshold\n",
+    "* logs are being generated\n",
+    "\n"
    ]
   }
  ],
