--- a/06_intro_to_numpy.ipynb
+++ b/06_intro_to_numpy.ipynb
@@ -13,7 +13,17 @@
    "id": "8d2672a3",
    "metadata": {},
    "source": [
-    "#### What's a venv"
+    "#### What's a venv\n",
+    "\n",
+    "A venv (virtual environment) lets you install packages for one project without affecting your system Python or other projects.\n",
+    "\n",
+    "So:\n",
+    "\n",
+    "- each project gets its own dependencies\n",
+    "\n",
+    "- no version conflicts\n",
+    "\n",
+    "- easy to reproduce setups"
    ]
   },
   {
@@ -21,8 +31,80 @@
    "id": "4d64fec9",
    "metadata": {},
    "source": [
-    "#### How to create a venv"
+    "#### How to create a venv\n",
+    "\n",
+    "Windows (Command Prompt)\n",
+    "\n",
+    "1. Open Command Prompt.\n",
+    "2. Create venv:\n",
+    "   `python -m venv .venv`\n",
+    "   (or `py -3 -m venv .venv`)\n",
+    "3. Activate:\n",
+    "   `.venv\\Scripts\\activate`\n",
+    "4. Install packages:\n",
+    "   `pip install pandas`\n",
+    "5. Freeze requirements:\n",
+    "   `pip freeze > requirements.txt`\n",
+    "6. Deactivate:\n",
+    "   `deactivate`\n",
+    "7. Remove: delete the `.venv` folder.\n",
+    "\n",
+    "Windows (PowerShell)\n",
+    "\n",
+    "1. Open PowerShell.\n",
+    "2. Create venv:\n",
+    "   `python -m venv .venv`\n",
+    "3. If execution is blocked, run once as admin:\n",
+    "   `Set-ExecutionPolicy -ExecutionPolicy RemoteSigned -Scope CurrentUser`\n",
+    "4. Activate:\n",
+    "   `.venv\\Scripts\\Activate.ps1`\n",
+    "5. Use `pip` / `pip freeze` / `deactivate` same as above.\n",
+    "\n",
+    "macOS / Linux (bash, zsh)\n",
+    "\n",
+    "1. Open Terminal.\n",
+    "2. Create venv:\n",
+    "   `python3 -m venv .venv`\n",
+    "3. Activate:\n",
+    "   `source .venv/bin/activate`\n",
+    "4. Install packages:\n",
+    "   `pip install pandas`\n",
+    "5. Freeze:\n",
+    "   `pip freeze > requirements.txt`\n",
+    "6. Deactivate:\n",
+    "   `deactivate`\n",
+    "7. Remove:\n",
+    "   `rm -rf .venv`\n",
+    "\n",
+    "macOS / Linux (fish shell)\n",
+    "\n",
+    "1. Create venv:\n",
+    "   `python3 -m venv .venv`\n",
+    "2. Activate:\n",
+    "   `source .venv/bin/activate.fish`\n",
+    "\n",
+    "Git Bash on Windows\n",
+    "\n",
+    "1. Create venv:\n",
+    "   `python -m venv .venv`\n",
+    "2. Activate:\n",
+    "   `source .venv/Scripts/activate`\n",
+    "   (or `.venv\\Scripts\\activate`)\n",
+    "\n",
+    "Notes (short)\n",
+    "\n",
+    "* Use `python` vs `python3` depending on your system.\n",
+    "* Use `.venv` (hidden) or `env` — name is up to you.\n",
+    "* To reproduce env on another machine: `pip install -r requirements.txt`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59e85dbe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
