--- a/06_intro_to_numpy.ipynb
+++ b/06_intro_to_numpy.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9f62bb14-9ba8-4617-ae0b-32baa38b3956",
    "metadata": {},
    "outputs": [
@@ -158,12 +158,13 @@
     }
    ],
    "source": [
+    "# Creating an array with 5 elements that are all zero\n",
     "np.zeros(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8e20a389-d46d-4aaf-a342-5d7f7a0f2a86",
    "metadata": {},
    "outputs": [
@@ -179,12 +180,13 @@
     }
    ],
    "source": [
+    "# Creating an array with 10 elements that are all one\n",
     "np.ones(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "4c85941a-20c4-4163-8dfe-0e2c03d927f4",
    "metadata": {},
    "outputs": [
@@ -200,6 +202,7 @@
     }
    ],
    "source": [
+    "# Creating an array of five elements that are all 8\n",
     "np.full(5, 8)"
    ]
   },
