--- a/01_intro_to_python.ipynb
+++ b/01_intro_to_python.ipynb
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b6c25fe",
+   "id": "1b83e1a2",
    "metadata": {},
    "source": [
     "#### String formatting using the formatted string (f-string)"
@@ -1564,7 +1564,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -1578,7 +1578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
