--- a/07_intro_to_pandas.ipynb
+++ b/07_intro_to_pandas.ipynb
@@ -13,6 +13,49 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b1d0dccd",
+   "metadata": {},
+   "source": [
+    "### Loading Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "827da209",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reading a CSV file\n",
+    "# df = pd.read_csv('data.csv')\n",
+    "# With custom separator and encoding\n",
+    "# df = pd.read_csv('data.csv', sep=';', encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "308f5d78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reading an Excel file\n",
+    "# df = pd.read_excel('data.xlsx', sheet_name='Sheet1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee9acbf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reading a JSON file\n",
+    "# df = pd.read_json('data.json')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8f0dd436-076c-41e3-9755-a96353d1f60e",
    "metadata": {},
    "source": [
@@ -428,6 +471,47 @@
    ],
    "source": [
     "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70caef34",
+   "metadata": {},
+   "source": [
+    "### Inspecting Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bcab82a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get information about the dataframe (columns, data types, memory usage)\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "401be935",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check data types of each column\n",
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0955530",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Count missing values in each column\n",
+    "df.isnull().sum()"
    ]
   },
   {
@@ -1829,6 +1913,62 @@
   },
   {
    "cell_type": "markdown",
+   "id": "32112cfb",
+   "metadata": {},
+   "source": [
+    "### Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08c4c1a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a new column\n",
+    "df['Age'] = 2024 - df['Year']\n",
+    "df[['Year', 'Age']].head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61e8edf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vectorized math operations\n",
+    "df['Price_per_HP'] = df['MSRP'] / df['Engine HP']\n",
+    "df[['MSRP', 'Engine HP', 'Price_per_HP']].head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e88a2a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Binning: cut() for equal-width bins\n",
+    "df['HP_Category'] = pd.cut(df['Engine HP'], bins=[0, 150, 250, 350], labels=['Low', 'Medium', 'High'])\n",
+    "df[['Engine HP', 'HP_Category']].head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f024216",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Binning: qcut() for equal-frequency bins (quantiles)\n",
+    "df['MSRP_Quartile'] = pd.qcut(df['MSRP'], q=4, labels=['Q1', 'Q2', 'Q3', 'Q4'])\n",
+    "df[['MSRP', 'MSRP_Quartile']].head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "16d43912-66bf-4c29-bb76-6d6337f98a20",
    "metadata": {},
    "source": [
@@ -2219,6 +2359,80 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ff3eaf75",
+   "metadata": {},
+   "source": [
+    "### Cleaning & Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4b5057a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop rows with missing values\n",
+    "df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d88108b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fill missing values with a specific value\n",
+    "df.fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3a1ef12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert column to different data type\n",
+    "df.astype({'Year': 'int64', 'MSRP': 'float64'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88fba989",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rename columns\n",
+    "df.rename(columns={'Engine HP': 'Horsepower', 'MSRP': 'Price'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e787d4ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove duplicate rows\n",
+    "df.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e94268d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clean and standardize strings\n",
+    "df['Vehicle_Style'] = df['Vehicle_Style'].str.strip().str.lower()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c5c1514a-d5d9-4ad2-8936-66cf08cc53dd",
    "metadata": {},
    "source": [
@@ -2271,6 +2485,39 @@
    ],
    "source": [
     "df.groupby(\"Transmission Type\").MSRP.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f6c4464",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using agg() for multiple aggregations\n",
+    "df.groupby(\"Transmission Type\")[\"MSRP\"].agg(['mean', 'min', 'max', 'count'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e66d06f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Multi-level aggregations\n",
+    "df.groupby([\"Transmission Type\", \"Make\"])[\"MSRP\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a1b786d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pivot table: aggregate data by multiple columns\n",
+    "df.pivot_table(values='MSRP', index='Make', columns='Transmission Type', aggfunc='mean')"
    ]
   },
   {
@@ -2368,17 +2615,171 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c7ed3668",
+   "metadata": {},
+   "source": [
+    "### Exporting Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c531aa5-bfa0-4890-8314-2e9d66c116c0",
+   "id": "2d330bb6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Export to CSV\n",
+    "# df.to_csv('output.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a150e388",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export to Excel\n",
+    "# df.to_excel('output.xlsx', index=False, sheet_name='Data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df0caa6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export to JSON\n",
+    "# df.to_json('output.json', orient='records')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa92b8f5",
+   "metadata": {},
+   "source": [
+    "### Time Series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07f37a56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert to datetime\n",
+    "dates = pd.Series(['2020-01-15', '2021-03-20', '2022-06-10'])\n",
+    "pd.to_datetime(dates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "073294a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a datetime index and resample\n",
+    "ts_df = pd.DataFrame({'value': [10, 20, 30, 40, 50]}, \n",
+    "                      index=pd.date_range('2024-01-01', periods=5, freq='D'))\n",
+    "ts_df.resample('2D').mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8fbc140",
+   "metadata": {},
+   "source": [
+    "### Reshaping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1fdf918",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pivot: reshape data from long to wide format\n",
+    "pivot_df = df.pivot_table(values='MSRP', index='Make', columns='Transmission Type')\n",
+    "pivot_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ec7e089",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Melt: reshape data from wide to long format\n",
+    "melted = df[['Make', 'Model', 'Year', 'MSRP']].head(2)\n",
+    "pd.melt(melted, id_vars=['Make', 'Model'], value_vars=['Year', 'MSRP'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "527de929",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sort values by column\n",
+    "df.sort_values('MSRP', ascending=False).head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bc33645",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sort by index\n",
+    "df.sort_index(ascending=False).head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e3e3159",
+   "metadata": {},
+   "source": [
+    "### Merging & Joining"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e3f9315",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge (SQL-style joins)\n",
+    "df1 = df[['Make', 'Model', 'MSRP']].head(3)\n",
+    "df2 = df[['Make', 'Model', 'Year']].head(3)\n",
+    "pd.merge(df1, df2, on=['Make', 'Model'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "777bf468",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Concatenate (stacking) dataframes\n",
+    "df_part1 = df.iloc[0:2]\n",
+    "df_part2 = df.iloc[2:4]\n",
+    "pd.concat([df_part1, df_part2], ignore_index=True)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -2392,7 +2793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
